--- a/evaluation_metrics/accuracy_precision_recall.ipynb
+++ b/evaluation_metrics/accuracy_precision_recall.ipynb
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "d1dc8140",
+   "id": "3ed51474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "25bd397c",
+   "id": "7732a5c0",
    "metadata": {},
    "outputs": [
     {
@@ -967,8 +967,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "18406a64",
+   "execution_count": 91,
+   "id": "f6ba50c6",
    "metadata": {},
    "outputs": [
     {
@@ -978,20 +978,20 @@
        "       [50,  0]])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix # .ravel() makes everything a one single long vector\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score # .ravel() makes everything a one single long vector\n",
     "confusion_matrix(y, y_hat)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6e780108",
+   "id": "b5889120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "876e4af5",
+   "id": "f508624f",
    "metadata": {},
    "outputs": [
     {
@@ -1021,8 +1021,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "id": "50e148d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = (TP+TN)/(TP+TN+FP+FN)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "d8c121aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(y, y_hat)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
-   "id": "0bae9b47",
+   "id": "cfbf8c0e",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "25244840",
+   "id": "100c2288",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "32a3f843",
+   "id": "e46c1f7e",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "67aa4f97",
+   "id": "ead8568f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "69e1f9c6",
+   "id": "6c47fd60",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "34784526",
+   "id": "01fbf4db",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "60160bb6",
+   "id": "729fd27c",
    "metadata": {},
    "outputs": [
     {
@@ -1168,21 +1212,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c69c74d",
+   "id": "8cf4f388",
    "metadata": {},
    "source": [
-    "## matthews correlaticoefficient"
+    "## matthews correlation coefficient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "44d8cde6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MCC = (TP * TN - FP*FN)/ ((TP+FP) * (TP+FN) * (FN+TP) * (TN+FN) + 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "a3e85ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MCC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37f59edb",
+   "id": "72f56ed4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "MCC = "
-   ]
+   "source": []
   }
  ],
  "metadata": {
